@startuml AI Factory Application Layer - Class Diagram
!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0

title AI Factory Simulation Layer - Class Diagram
footer Use PlantUML (freeware) or online renderer at plantuml.com

package "Core Entities" #LightGreen {
    class Job <<dataclass>> {
        +job_id: int
        +name: str
        +steps: list[JobStep]
        +participants: list[str]
    }

    class JobStep <<dataclass>> {
        +step_id: int
        +phases: list[Phase]
    }

    abstract class Phase <<dataclass>> {
        +phase_id: int
        +name: str
    }

    class ComputePhase <<dataclass>> {
        +duration_s: float
    }

    class CommPhase <<dataclass>> {
        +buckets: list[Bucket]
    }

    class Bucket <<dataclass>> {
        +bucket_id: int
        +flows: list[Flow]
    }

    Job "1" *-- "*" JobStep
    JobStep "1" *-- "*" Phase
    Phase <|-- ComputePhase
    Phase <|-- CommPhase
    CommPhase "1" *-- "*" Bucket
}

package "Traffic Layer" #LightBlue {
    class Flow <<dataclass>> {
        +flow_id: int
        +job_id: int
        +step_id: int
        +phase_id: int
        +bucket_id: int | None
        +tag: str
        +src_node_id: str
        +dst_node_id: str
        +size_bytes: int
        +start_time: float
        +priority: int | None
        +deadline: float | None
        +metadata: Mapping
        --
        +signature_tuple(): tuple
    }

    class CollectiveResult <<dataclass>> {
        +flows: list[Flow]
        +join_flow_ids: set[int]
    }

    enum CollectiveKind {
        REDUCE_SCATTER
        ALL_GATHER
        ALL_REDUCE
    }

    enum CollectiveAlgorithm {
        RING
        TREE
    }

    Bucket "1" *-- "*" Flow
    CollectiveResult "1" *-- "*" Flow
}

package "Runtime Core" #LightYellow {
    class JobRunner {
        +sim: DiscreteEventSimulator
        +injector: FlowInjector
        +job: Job
        +metrics: JobMetrics
        --
        +run(): JobMetrics
        -_start_job()
        -_run_step(step_index: int)
        -_run_phase(step_index, phase_index)
        -_run_comm_phase(phase, done_phase)
    }

    abstract class FlowInjector {
        --
        {abstract} +inject(flow: Flow, on_complete: Callable)
    }

    class NetworkFlowInjector {
        -_network: Network
        -_callbacks: dict
        -_stats: dict
        --
        +inject(flow: Flow, on_complete: Callable)
    }

    FlowInjector <|-- NetworkFlowInjector
    JobRunner --> FlowInjector
    JobRunner --> Job
}

package "Scheduling & Barriers" #LightPink {
    class BarrierBookkeeper {
        +joins: Dict[str, Join]
        --
        +add_join(name: str, join: Join)
        +on_flow_complete(flow_id: int)
    }

    class Join {
        +pending: Set[int]
        +on_done: Callable
        --
        +mark_complete(flow_id: int)
    }

    class IdGenerator <<dataclass>> {
        +seed: int
        --
        +next_int(bits: int): int
        +child(salt: int | str): IdGenerator
    }

    BarrierBookkeeper "1" *-- "*" Join
    JobRunner --> BarrierBookkeeper : uses
}

package "Metrics" #LightCyan {
    class JobMetrics <<dataclass>> {
        +job_id: int
        +start_time: float
        +end_time: float | None
        +steps: list[StepMetrics]
    }

    class StepMetrics <<dataclass>> {
        +step_id: int
        +start_time: float
        +end_time: float
        +phases: list[PhaseMetrics]
    }

    class PhaseMetrics <<dataclass>> {
        +phase_id: int
        +name: str
        +start_time: float
        +end_time: float
    }

    JobMetrics "1" *-- "*" StepMetrics
    StepMetrics "1" *-- "*" PhaseMetrics
    JobRunner --> JobMetrics
}

package "Scenarios" #Wheat {
    class MixedScenario <<Scenario>> {
        +name: str
        +steps: int
        +seed: int
        +traffic_scale: float
        +allocation_mode: str
        +stage_placement_mode: str
        +jobA_*: ...params...
        +jobB_*: ...params...
        --
        +install(network)
        +parameters_summary(): dict
    }
}

package "Workloads" #LightSteelBlue {
    class MixedScenarioJobAConfig <<dataclass>> {
        +steps: int
        +seed: int
        +traffic_scale: float
        +fwd_compute_ms: float
        +micro_collectives: int
        +micro_collective_bytes_per_participant: int
        ...
    }

    class MixedScenarioJobBConfig <<dataclass>> {
        +steps: int
        +seed: int
        +traffic_scale: float
        +microbatch_count: int
        +microbatch_gap_us: float
        +activation_bytes_per_microbatch: int
        ...
    }

    MixedScenario ..> MixedScenarioJobAConfig : uses
    MixedScenario ..> MixedScenarioJobBConfig : uses
}

note "Integration with Network Layer" as N1
package "Network Layer (External)" #LightGray {
    class DiscreteEventSimulator <<external>> {
        +schedule_event(delay, action)
        +get_current_time(): float
    }

    class Network <<external>> {
        +hosts: Dict[str, Host]
        +simulator: DiscreteEventSimulator
    }

    class Host <<external>> {
        +send_message(...)
        +on_message(packet)
    }
}

JobRunner --> DiscreteEventSimulator
NetworkFlowInjector --> Network
NetworkFlowInjector --> Host : wraps on_message
MixedScenario --> Network : installs into
MixedScenario ..> JobRunner : creates

@enduml
